--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
+    "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
+    "icons": "^1.0.0",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.541.0",
+    "next": "15.5.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-hot-toast": "^2.6.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.12",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12"
   }
 }
